Fix footer being hidden behind menu on mobile

--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -81,15 +81,19 @@ main {
 @media(max-width: 800px) {
     #page,
     main {
-        padding: 0 2rem 6rem 2rem;
+        padding: 0 2rem 1rem 2rem;
         overflow-x: hidden;
+    }
+
+    body {
+        padding-bottom: 5rem;
     }
 }
 
 @media(max-width: 600px) {
     #page,
     main {
-        padding: 0 1rem 4rem 1rem;
+        padding: 0 1rem 1rem 1rem;
     }
 }
 
